--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   "author": "mikevalstar@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
+  },
+  "devDependencies": {
+    "utils-merge": "^1.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0",
+    "gulp-livereload": "^3.8.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babelify": "^7.2.0",
@@ -19,15 +28,6 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "utils-merge": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0",
-    "gulp-livereload": "^3.8.1"
-  },
-  "devDependencies": {
     "gulp-bower": "0.0.11",
     "gulp-util": "^3.0.7"
   }
